<resources>
    <string name="app_name">MiniSpotify</string>
    <string name="tvNombreLogin">Nombre</string>
    <string name="textUser">Usuario</string>
    <string name="textPass">Contraseña</string>
    <string name="btnEntrar">Acceder</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="textRegistro">Registrese como usuario</string>
    <string name="RecordarUsuario">Recordar usuario</string>
    <string name="tvCanciones">Lista Canciones</string>
    <string name="tvArtistas">Artistas</string>
    <string name="tvCancionesFav">Canciones Favoritas</string>
    <string name="tvPlaylists">Playlists</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="perfil">Perfil</string>
    <string name="favSong">Fav Song</string>
    <string name="library">Biblioteca</string>
    <string name="textNewPlaylist">CREATE NEW PLAYLIST</string>
    <string name="textTitle">Titulo de la Playlist</string>
    <string name="textImage">Url de la imagen</string>
    <string name="crear">crear</string>
    <string name="notRequired">Not required</string>
    <string name="required">Required</string>
    <string name="nombre_perfil">Nombre del perfil</string>
    <string name="cuenta_no_premium">Cuenta no premium</string>
    <string name="correo">Correo electrónico</string>
    <string name="correoOculto">*********@gmail.com</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="archivosLocales">Archivos locales</string>
    <string name="publicidad">Publicidad</string>
    <string name="version">Version</string>
    <string name="numVersion">8.7.42.943</string>
    <string name="tyc">Términos y Condiciones de Uso</string>
    <string name="pp">Política de Privacidad</string>
    <string name="tv_dark_mode">Dark Mode</string>
    <string name="tv_ligth_mode">Ligth Mode</string>
    <string name="tv_logout">Log Out</string>
    <string name="nombreArtista">Canciones Del Artista</string>
    <string name="textEditPlaylist">EDIT YOUR PLAYLIST</string>
    <string name="done">DONE</string>
</resources>