<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PerfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginTop="@dimen/common_margin_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintStart_toEndOf="@+id/imgPerfil"
            app:layout_constraintTop_toBottomOf="@id/imgPerfil"
            android:background="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/btnDarkMode"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_dark_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linLay2"
            app:layout_constraintVertical_bias="0.412" />

        <ImageButton
            android:id="@+id/btnLigthMode"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_ligth_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linLay2"
            app:layout_constraintVertical_bias="0.412" />

        <ImageButton
            android:id="@+id/btnLogOut"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:layout_marginEnd="92dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linLay2"
            app:layout_constraintVertical_bias="0.412" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_min"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPerfil"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvNombrePerfil"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_padding_default"
                android:text="@string/nombre_perfil"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/tvCuentaNoPremium"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/cuenta_no_premium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/correo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/correoOculto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/correoOculto"
                android:textColor="@color/gris_claro" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_min"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit">

            <TextView
                android:id="@+id/notificaciones"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/notificaciones"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/archivosLocales"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/archivosLocales"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/publicidad"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/publicidad"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/version"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/numVersion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/numVersion"
                android:textColor="@color/gris_claro" />

            <TextView
                android:id="@+id/tyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/tyc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_margin_min"
                android:text="@string/pp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hideOnScroll="false"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleMargin="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_menu"
            android:background="@android:color/transparent"
            app:labelVisibilityMode="labeled"
            android:layout_marginEnd="15dp"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>